k8s/testing/app-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dsv-app
  namespace: default
spec:
  # Max 12 nodes based on config. Missing nodes will stay pending (Standby behavior).
  replicas: 3
  serviceName: dsv-app-headless
  selector:
    matchLabels:
      app: dsv-app
  template:
    metadata:
      labels:
        app: dsv-app
    spec:
      containers:
        - name: dsv-app
          image: dsv-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4801
              name: cluster
            - containerPort: 8080
        - name: redis-sidecar
          image: redis:8.6-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server", "--appendonly", "yes"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
