k8s/testing/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsv-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: dsv-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dsv-app-headless
  namespace: default
spec:
  # Headless service for DNS lookups of all agent nodes
  type: ClusterIP
  clusterIP: None
  selector:
    app: dsv-app
  ports:
    - name: cluster
      port: 4801
      targetPort: 4801
    - name: http
      port: 8080
      targetPort: 8080
