k8s/testing/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: dsv
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: client
  clusterIP: None
  selector:
    app: kafka
