k8s/testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsv-ingress
  namespace: dsv
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsv-app-service
                port:
                  number: 9080
